[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://src/common/SearchPanel.gd" id="1_h8rrh"]
[ext_resource type="Script" path="res://src/nominatim/NominatimClient.gd" id="2_3gcus"]
[ext_resource type="Script" path="res://src/common/RichTextButton.gd" id="2_xgacv"]

[node name="SearchPanel" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 432.0
grow_horizontal = 2
theme_type_variation = &"RichTextButton"
script = ExtResource("1_h8rrh")

[node name="InputContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SearchTextLineEdit" type="LineEdit" parent="InputContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="SearchButton" type="Button" parent="InputContainer"]
layout_mode = 2
text = "Go
"

[node name="ResultContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ResultList" type="VBoxContainer" parent="ResultContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResultItemTemplate" type="RichTextLabel" parent="ResultContainer/ResultList"]
visible = false
layout_mode = 2
focus_mode = 2
mouse_filter = 2
theme_type_variation = &"RichTextButton"
bbcode_enabled = true
fit_content = true
script = ExtResource("2_xgacv")
disabled = true
shortcut_feedback = true
shortcut_in_tooltip = true

[node name="MoreButton" type="Button" parent="ResultContainer/ResultList"]
visible = false
layout_mode = 2
text = "More..."

[node name="NominatimClient" type="HTTPRequest" parent="."]
script = ExtResource("2_3gcus")

[connection signal="text_changed" from="InputContainer/SearchTextLineEdit" to="." method="_on_search_text_line_edit_text_changed"]
[connection signal="text_submitted" from="InputContainer/SearchTextLineEdit" to="." method="_on_search_text_line_edit_text_submitted"]
[connection signal="pressed" from="InputContainer/SearchButton" to="." method="_on_search_button_pressed"]
[connection signal="meta_clicked" from="ResultContainer/ResultList/ResultItemTemplate" to="." method="_on_result_item_template_meta_clicked"]
[connection signal="meta_pressed" from="ResultContainer/ResultList/ResultItemTemplate" to="." method="_on_result_item_meta_pressed"]
[connection signal="pressed" from="ResultContainer/ResultList/MoreButton" to="." method="_on_more_button_pressed"]
[connection signal="query_completed" from="NominatimClient" to="." method="_on_nominatim_client_query_completed"]
